UI fix for readonly fields

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ input {
 }
 
 input:read-only {
+    pointer-events: none;
     width: 116px;
     border-width: 0 0 1px 0;
     background-color: white;
